# p7-follow-person-mdelicado2021

camera/: CMakeLists.txt
camera/launch/: camera.launch.py  detection3d_hsv.launch.py
p6_package/: CMakeLists.txt  package.xml
p6_package/include/p6_package/: CycleNode.hpp  PIDController.hpp  TFPublisherNode.hpp
p6_package/launch/: p6.launch.py
p6_package/src/: cyclenode_main.cpp  tf_publisher_main.cpp
p6_package/src/p6_package/: CycleNode.cpp  PIDController.cpp  TFPublisherNode.cpp
